--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+
     <script data-main="js/main.js" src="js/require.js"></script>
+    <script>
+      requirejs.config({
+        "paths": {
+          "jquery": "//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min",
+          "io": "//cdn.socket.io/socket.io-1.2.0"
+        }
+      });</script>
   </head>
   <body>
     <ul id="messages"></ul>
