--- a/ilya.html
+++ b/ilya.html
@@ -12,7 +12,9 @@
         });</script>
 </head>
 <body>
- TEST
-<input type="button" id="say"> </input>
+<ul id="messages"></ul>
+<form action="">
+    <input id="m" autocomplete="off" /><button>Send</button>
+</form>
 </body>
 </html>
