--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
 
-    <script data-main="js/main.js" src="js/require.js"></script>
+	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="js/main.js"></script>
     <script>
-      requirejs.config({
-        "paths": {
-          "jquery": "//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min",
-          "io": "//cdn.socket.io/socket.io-1.2.0"
-        }
-      });</script>
+	$(document).ready(function() {
+		app.init();
+	})
+	</script>
   </head>
   <body>
     <ul id="messages"></ul>
