--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/connector.js"></script>
     <script>
 	$(document).ready(function() {
 		app.init();
