deleted old modules, rewrited existing

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="js/main.js"></script>
     <script src="js/connector.js"></script>
+    <script src="js/smile.js"></script>
+
     <script>
 	$(document).ready(function() {
 		app.init();
