--- a/smile.html
+++ b/smile.html
@@ -2,7 +2,17 @@
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <script data-main="js/smile.js" src="js/require.js"></script>
+       <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+       <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+       <script src="js/main.js"></script>
+       <script src="js/connector.js"></script>
+       <script src="js/smile.js"></script>
+
+       <script>
+           $(document).ready(function() {
+               app.init();
+           })
+       </script>
    </head>
    <body>
     <input id="text" autocomplete="off"/><button id="say">Say it, bitch!</button>
