--- a/smile.html
+++ b/smile.html
@@ -16,6 +16,7 @@
    </head>
    <body>
     <input id="text" autocomplete="off"/><button id="say">Say it, bitch!</button>
-    <embed width="100%" height="100%" name="plugin" src="" type="audio/wav">
+    <!-- <embed width="100%" height="100%" name="plugin" src="" type="audio/wav"> -->
+    <audio id="111"></audio>
    </body>
 </html>
