not tested send image function

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	</script>
   </head>
   <body>
+    <img src=""></img>
+    <canvas></canvas>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
