--- a/alexby.html
+++ b/alexby.html
@@ -4,7 +4,11 @@
 		<title>MOVE IT!</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<!--script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"     )--><script src="js/jquery.js"></script><!--script(src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP")--><script src="js/predefined.js"></script><script src="js/current.js"></script><script src="plugins/glfx/glfx.js"></script><script src="plugins/jslider/jquery.slider.min.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/predefined.js"></script>
+		<script src="js/current.js"></script>
+		<script src="plugins/glfx/glfx.js"></script>
+		<script src="plugins/jslider/jquery.slider.min.js"></script>
 		<link href="plugins/jslider/jquery.slider.min.css" rel="stylesheet">
 		<script src="plugins/crazyObjects/1.1/js/jquery.userTransformation_edit.js"></script>
 		<link href="plugins/crazyObjects/1.1/css/jquery.userTransformation_edit.css" rel="stylesheet">
@@ -12,7 +16,11 @@
 		<link href="plugins/crazyObjects/1.1/css/crazyObjects_edit.css" rel="stylesheet">
 		<link href="css/index.css" rel="stylesheet">
 		<link href="icons/style.css" rel="stylesheet">
-		<script src="js/scene.js"></script><script src="js/tap.js"></script><script src="js/player.js"></script><script src="js/index.js"></script>
+		<script src="js/scene.js"></script>
+		<script src="js/tap.js"></script>
+		<script src="js/player.js"></script>
+		<script src="js/index.js"></script>
+		<script src="js/main.js"></script>
 	</head>
 	<body>
 		<article>
@@ -28,5 +36,7 @@
 				<div class="close large button orange">Close</div>
 			</div>
 		</aside>
+		<input type="button" onclick="setImage();return false;" value="setImage" />
+		<input type="button" onclick="playAudioAndVideo();return false;" value="play" />
 	</body>
 </html>
