--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
     <script src="js/connector.js"></script>
     <script src="js/smile.js"></script>
 
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<script src="js/jquery.js"></script>
+	<script src="js/predefined.js"></script>
+	<script src="js/current.js"></script>
+	<script src="plugins/glfx/glfx.js"></script>
+	<script src="plugins/jslider/jquery.slider.min.js"></script>
+	<link href="plugins/jslider/jquery.slider.min.css" rel="stylesheet">
+	<script src="plugins/crazyObjects/1.1/js/jquery.userTransformation_edit.js"></script>
+	<link href="plugins/crazyObjects/1.1/css/jquery.userTransformation_edit.css" rel="stylesheet">
+	<script src="plugins/crazyObjects/1.1/js/crazyObjects_edit.js"></script>
+	<link href="plugins/crazyObjects/1.1/css/crazyObjects_edit.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
+	<link href="icons/style.css" rel="stylesheet">
+	<script src="js/scene.js"></script>
+	<script src="js/tap.js"></script>
+	<script src="js/player.js"></script>
+	<script src="js/index.js"></script>
+		
     <script>
 	$(document).ready(function() {
 		app.init();
@@ -26,11 +45,21 @@
 	</script>
   </head>
   <body>
-    <img src=""></img>
-    <canvas></canvas>
+		<article>
+			<div class="browser">Sorry dude... this hack is not working yet in your browser. <br> <a href="https://www.google.com/chrome">Just download chrome ;)</a></div>
+		</article>
+		<div class="hh" style="display:none">
+			<canvas width="500" height="256" id="spectrum_canvas" class="spectrum_canvas"></canvas>
+			<input value="130;180" data-letter="i" data-channel="0" class="c"/><input value="40;190" data-letter="a" data-channel="0" class="c"/><input value="80;130" data-letter="o" data-channel="0" class="c"/><input value="0;24" data-letter="bass" data-channel="1" class="c"/><input value="488;496" data-letter="strobo" data-channel="1" class="c"/><input value="70;75" data-letter="middle" data-channel="1" class="c"/>
+		</div>
+		<input type="button" onclick="setImage();return false;" value="setImage" />
+		<input type="button" onclick="playAudioAndVideo();return false;" value="play" />
+
+    <div style="width: 300px;">
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+	</div>
   </body>
 </html>
