--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
+      #messages li:nth-child(even) { background: #DCDCDC; }
     </style>
 
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
