added shwing user image on message

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<input type="button" onclick="playAudioAndVideo();return false;" value="play" />
 
     <div style="width: 300px;">
+	<canvas id="canvas"></canvas>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
