fixed overriding user image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<canvas width="500" height="256" id="spectrum_canvas" class="spectrum_canvas"></canvas>
 			<input value="130;180" data-letter="i" data-channel="0" class="c"/><input value="40;190" data-letter="a" data-channel="0" class="c"/><input value="80;130" data-letter="o" data-channel="0" class="c"/><input value="0;24" data-letter="bass" data-channel="1" class="c"/><input value="488;496" data-letter="strobo" data-channel="1" class="c"/><input value="70;75" data-letter="middle" data-channel="1" class="c"/>
 		</div>
-		<input type="button" onclick="setImage();return false;" value="setImage" />
+		<input type="button" onclick="setImage(true);return false;" value="setImage" />
 		<input type="button" onclick="playAudioAndVideo();return false;" value="play" />
 
     <div style="width: 300px;">
