added pronouncing after message was received

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script src="js/tap.js"></script>
 	<script src="js/player.js"></script>
 	<script src="js/index.js"></script>
+    <script src="js/speacking.js"></script>
 		
     <script>
 	$(document).ready(function() {
