--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 	</script>
   </head>
   <body>
+		<div id="before_images" style="width: 100px; height: 100%; background: white;">
+			<a href="#" onclick="makePhoto(); return false;"><img src="images/camera.png" width="100" /></a>
+		</div>
 		<article>
 			<div class="browser">Sorry dude... this hack is not working yet in your browser. <br> <a href="https://www.google.com/chrome">Just download chrome ;)</a></div>
 		</article>
