--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       #messages li:nth-child(even) { background: #DCDCDC; }
     </style>
 
-	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+	<!--<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>!-->
+    <script src = "js/jquery2.js"></script>
+	<!--<script src="//cdn.socket.io/socket.io-1.2.0.js"></script>!-->
+    <script src="js/socket.io.js"></script>
     <script src="js/main.js"></script>
     <script src="js/connector.js"></script>
     <script src="js/smile.js"></script>
