added possibility to select if you need translation or  not

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 		<input type="button" onclick="playAudioAndVideo();return false;" value="play" />
 		<input type="button" id="start_btn" value="Start"/>
 	    <input type="button" id="stop_btn" value="Stop"/>
+		<input type="checkbox" id="translate" name="translate"/>
+		<label for="translate">Translate</label>
 
     <ul id="messages" style="width: 300px; overflow-y: scroll; height: 90%;"></ul>
     <form action="">
